--- a/style.css
+++ b/style.css
@@ -7,14 +7,13 @@ body,html{
           margin: 0;
 }
 .container{
-          background-color: burlywood;
+          background-color:darkgrey;
           text-align: center;
           align-items: center;
           justify-content: center;
-          margin: 250px;
           border-radius: 6px;
-          padding: 7px;
-          margin-top: 150px;
+          padding: 12px;
+          margin-top: 135px;
 }
 .buttons{
           height: 55px;
@@ -35,5 +34,9 @@ input[type="text"]{
           padding-top: 5px;
 }
 #equal{
-          background-color:coral;
+          background-color:rgba(105, 105, 105, 0.397); 
+          border: none;
+}
+#back{
+          padding-top: 7px;
 }
